--- a/src/main.css
+++ b/src/main.css
@@ -18,8 +18,6 @@
         align-items: center;
         border-radius: 5px;
         margin:0;
-       
-        /* width:100%; */
         }
 
       .header{
@@ -33,12 +31,7 @@
         
     }
 
-      /* .container_filter h4{
-          padding-top: 4px;;
-        
-
-      }
-      */
+    
       .launchyear{
        
         font-size: small;
@@ -71,14 +64,8 @@
       .column1 {
         
         flex: 50%;
-     
-
       }
-
-
-      
-      /* Clear floats after the columns */
-      .row {
+       .row {
     
         display: flex;
       }
@@ -127,3 +114,36 @@
     .bold{
         font-weight: bold;
     }
+    .spacebox1{
+      display:none;
+    }  
+    .name{
+      font-weight: bold;
+      padding-left: 400px;
+    
+      
+    }
+    /* media queries */
+
+    @media screen and (max-width:700px)
+    {
+      .spacebox{
+        display:none ;
+       }
+      .spacebox1{
+        display: block;
+        grid-template-columns: auto;
+        background-color :#F0F0F0;
+        grid-gap: 10px;
+        padding: 10px;
+      }
+    
+    }
+
+    @media screen and (max-width:1024px)
+    {
+      .spacebox{
+        grid-template-columns: auto auto;
+      }
+    }
+   
